--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -14,7 +14,7 @@
 
     <div class='col-lg-7 offset-lg-1 hidden-sm-down title-box'>
       <div class='row'>
-        <h2 class='subtitle'>Converta facilmente suas Moedas</h2>
+        <h2 class='subtitle'>Converta facilmente suas Moedas \o/</h2>
       </div>
                 
       <div class='row'>
