--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -1,8 +1,8 @@
 <div class='container'>
   <div class='row main'>
-    <div class='col-lg-3 offset-lg-1 col-md-10 offset-md-1 exchange_box'>
+    <div class='col-lg-4 offset-lg-1 col-md-10 offset-md-1 exchange_box'>
       <div class='row'>
-          <div class='col-md-8 offset-md-2 text-sm-center'>
+          <div class='col-md-8 offset-md-2 text-center'>
             <%= image_tag '/logo.png', class: 'img-fluid'%>
           </div>
       </div>
@@ -14,11 +14,11 @@
 
     <div class='col-lg-7 offset-lg-1 hidden-sm-down title-box'>
       <div class='row'>
-        <h2 class='subtitle'>Converta facilmente suas Moedas \o/</h2>
+        <h2 class='subtitle'>Converta facilmente suas Moedas</h2>
       </div>
                 
       <div class='row'>
-        <h3 class='subtitle'>Para qualquer moeda no Mundo!!!</h3>
+        <h3 class='subtitle'>Para qualquer moeda no Mundo</h3>
       </div>
     </div>
   </div>
